# artikcloud-lwm2m-c

./: .gitignore  .gitmodules  CMakeLists.txt  README-client-api.md  README.md  builddeb.sh  libwakaama-client.version
core/: internals.h  liblwm2m.c  liblwm2m.h  management.c  objects.c  observe.c  packet.c  registration.c  tlv.c  transaction.c  uri.c  utils.c  wakaama.cmake
core/er-coap-13/: er-coap-13.c  er-coap-13.h
core/lwm2m_object/: lwm2mclient.c  lwm2mclient.h  object_connectivity_moni.c  object_device.c  object_firmware.c  object_location.c  object_security.c
debian/: changelog  control  rules  wakaama-client-dev.install  wakaama-client-examples.install  wakaama-client.install
examples/akc_client/: CMakeLists.txt  README.md  akc_client.c  client_cmdline.c
examples/akc_ota/: CMakeLists.txt  akc_ota.c
examples/artikclient/: CMakeLists.txt  artiklwm2mclient.c
examples/bootstrap_server/: bootstrap_server.c
examples/client/: lwm2mclient.c
examples/lightclient/: lightclient.c
examples/lwm2mclient/: CMakeLists.txt  libwakaama-client.version  lwm2mclient.c  lwm2mclient.h  object_device.c  object_firmware.c  object_security.c  openssl_utils.c
examples/server/: lwm2mserver.c
examples/shared/: commandline.c  connection.c  connection.h  dtlsconnection.c  mbedtls_connection.c  openssl_connection.c  shared.cmake
examples/stxt_client/: CMakeLists.txt  client_cmdline.c  stxt_client.c
examples/stxt_ota/: CMakeLists.txt  stxt_ota.c
packaging/: wakaama-client.spec
tests/server/: CMakeLists.txt  lwm2mserver.c
tests/utils/: connection.c  connection.h
